(review) =URP= * Remove OldDocProvider internal interface * Rework responses params (to include URP name) * Rework hash computation to prevent successive loops over fields * Hash field needs to be explicitly specified in config * Removes per request enablement of URP
=Javadoc/naming=
* Take into account doc values/field values in javadoc
* Prefer "drop" over "discard" in doc/variables/method names
* Removes remaining Collections.singletonList()

=Unit test=
* Adds utility method in SolrTestCaseJ4 to get update response
* Rework unit test to use actual URP chain, remove mocks
* Improve test coverage for URP factory parameters (excluded fields)
* Improve test coverage for URP (drop, log modes, multi-valued fields)