@@ -18,7 +18,6 @@
 package org.apache.solr.update.processor;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.function.Predicate;
@@ -35,14 +34,10 @@ import org.apache.solr.util.plugin.SolrCoreAware;
 public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFactory
     implements SolrCoreAware, UpdateRequestProcessorFactory.RunAlways {
   private static final char SEPARATOR = ','; // Separator for included/excluded fields
-  static final String CONTENT_HASH_ENABLED_PARAM = "contentHashEnabled";
-  private List<String> includeFields =
-      Collections.singletonList("*"); // Included fields defaults to 'all'
+  private List<String> includeFields = List.of("*"); // Included fields defaults to 'all'
   private List<String> excludeFields = new ArrayList<>();
-  // No excluded field by default, yet hashFieldName is excluded by default
-  private String hashFieldName =
-      "content_hash"; // Field name to store computed hash on create/update operations
-  private boolean discardSameDocuments = true;
+  private String hashFieldName; // Must be explicitly configured
+  private boolean dropSameDocuments = true;
 
   public ContentHashVersionProcessorFactory() {}
 
@@ -61,13 +56,16 @@ public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFa
               .collect(Collectors.toList());
     }
     tmp = args.remove("hashFieldName");
-    if (tmp != null) {
-      if (!(tmp instanceof String)) {
-        throw new SolrException(
-            SolrException.ErrorCode.SERVER_ERROR, "'hashFieldName' must be configured as a <str>");
-      }
-      this.hashFieldName = (String) tmp;
+    if (tmp == null) {
+      throw new SolrException(
+          SolrException.ErrorCode.SERVER_ERROR,
+          "'hashFieldName' is required and must be explicitly configured");
     }
+    if (!(tmp instanceof String)) {
+      throw new SolrException(
+          SolrException.ErrorCode.SERVER_ERROR, "'hashFieldName' must be configured as a <str>");
+    }
+    this.hashFieldName = (String) tmp;
 
     tmp = args.remove("excludeFields");
     if (tmp != null) {
@@ -97,16 +95,16 @@ public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFa
             "'hashCompareStrategy' must be configured as a <str>");
       }
       String value = ((String) tmp).toLowerCase(Locale.ROOT);
-      if ("discard".equalsIgnoreCase(value)) {
-        discardSameDocuments = true;
+      if ("drop".equalsIgnoreCase(value)) {
+        dropSameDocuments = true;
       } else if ("log".equalsIgnoreCase(value)) {
-        discardSameDocuments = false;
+        dropSameDocuments = false;
       } else {
         throw new SolrException(
             SolrException.ErrorCode.SERVER_ERROR,
             "Value '"
                 + value
-                + "' is unsupported for 'hashCompareStrategy', only 'discard' and 'log' are supported.");
+                + "' is unsupported for 'hashCompareStrategy', only 'drop' and 'log' are supported.");
       }
     }
 
@@ -115,10 +113,6 @@ public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFa
 
   public UpdateRequestProcessor getInstance(
       SolrQueryRequest req, SolrQueryResponse rsp, UpdateRequestProcessor next) {
-    if (!req.getParams().getBool(CONTENT_HASH_ENABLED_PARAM, false)) {
-      return next;
-    }
-
     ContentHashVersionProcessor processor =
         new ContentHashVersionProcessor(
             buildFieldMatcher(includeFields),
@@ -127,7 +121,7 @@ public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFa
             req,
             rsp,
             next);
-    processor.setDiscardSameDocuments(discardSameDocuments);
+    processor.setDropSameDocuments(dropSameDocuments);
     return processor;
   }
 
@@ -150,8 +144,8 @@ public class ContentHashVersionProcessorFactory extends UpdateRequestProcessorFa
     return excludeFields;
   }
 
-  public boolean discardSameDocuments() {
-    return discardSameDocuments;
+  public boolean dropSameDocuments() {
+    return dropSameDocuments;
   }
 
   static Predicate<String> buildFieldMatcher(List<String> fieldNames) {
